@@ -1,4 +1,4 @@
-ThisBuild / scalaVersion := "2.12.10"
+ThisBuild / scalaVersion := "2.11.12"
 ThisBuild / version := "0.1.0-SNAPSHOT"
 
 ThisBuild / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.Flat
@@ -7,7 +7,11 @@ ThisBuild / javaOptions += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
 
 Compile / mainClass := Some("com.ecommerce.analytics.MainApp")
 
-lazy val sparkVersion = "3.5.0"
+Compile / run / javaOptions ++= Seq(
+  "--add-opens=java.base/java.net=ALL-UNNAMED"
+)
+
+lazy val sparkVersion = "2.2.1"
 
 lazy val root = (project in file("."))
   .settings(
